# kanji_card

./: .dockerignore  .gitignore  Dockerfile  README.md  config  config.toml.template  docker-compose.yml
.github/workflows/: deploy-kanji.yml  deploy-vpn.yml  docker-build.yml
kanji_card/: Cargo.toml  Makefile.toml
kanji_card/data/cardsets/admin/: 01JXT07P45TCER0M0TDVM19Q8Q.json  01JXT07P47FJQS3P4ZR96HZGWE.json  01JXT1C68TP25E9F63AE38DJEA.json  01JXT1C68VWKHC33X35HXMEXAD.json  01JXT1C68Y61RCGJA9RNZWY6N4.json  01JXT1C68Z59YS7NA5WQC250GV.json
kanji_card/data/users/: admin.json
kanji_card/src/: api.rs  auth.rs  auth_api.rs  config.rs  domain.rs  llm.rs  main.rs  query.rs  release_repository.rs  repository.rs  rule_repository.rs  set_repository.rs  set_service.rs  user_repository.rs  web_ui.rs  word_release_repository.rs  word_repository.rs
kanji_card/src/application/: mod.rs  rule_service.rs  set_service.rs
kanji_card/src/domain/: mod.rs  rule.rs  word.rs
kanji_card/src/environment/: api.rs  auth.rs  auth_api.rs  mod.rs  query.rs
kanji_card/src/rule/: mod.rs  rule_repository.rs  rule_service.rs
kanji_card/src/user/: auth.rs  auth_api.rs  mod.rs  user_repository.rs
kanji_card/src/word/: api.rs  mod.rs  query.rs  set_repository.rs  set_service.rs  word_creator.rs  word_release_manager.rs  word_release_repository.rs  word_repository.rs
kanji_card/src/word/domain/: mod.rs  set.rs
kanji_card_ui/: .eslintrc.json  next.config.js  package-lock.json  package.json
kanji_card_ui/api/: index.ts
kanji_card_ui/app/: globals.css  layout.tsx  page.tsx
(+140 files in other folders)
