[package]
name = "kanji_card"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ulid = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors"] }
utoipa-axum = { version = "0.2" }
tracing = "0.1"
config = "0.15"
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["default"] }
opentelemetry-appender-tracing = "0.30"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.4", features = ["derive"] }
rust-embed = { version = "8.7", features = ["axum"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
cookie = "0.18"
jsonwebtoken = "9.2"
hyper = { version = "1.6", features = ["full"] }
sha2 = "0.10.8"
